# component-reuse-economy

Viability/: app.py  coordinates.csv  pyproject.toml
Viability/MaterialPurchase/: MaterialPurchase.alp  MaterialPurchase.original.alp
Viability/MaterialPurchase/cache/: giscache  giscache.p
Viability/MaterialPurchase/database/: db.properties  db.script
Viability/geodata/: finland.geojson
src/: main.py  pyproject.toml
src/dashboard/: app.py
src/notebooks/: metrics.ipynb
