[project]
name = "viability"
version = "0.1.0"
description = ""
authors = [
    {name = "Genrikh Ekkerman",email = "genrikh.ekkerman@hamk.fi"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "plotly (>=6.5.1,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "dash (>=3.3.0,<4.0.0)",
    "haversine (>=2.9.0,<3.0.0)",
    "numpy (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
