[project]
name = "raksa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "dash (>=3.3.0,<4.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
]
